2022-03-10  Peng Liu  <peng.liu6@apple.com>

        EnterPictureInPictureEvent event was renamed to PictureInPictureEvent in spec
        https://bugs.webkit.org/show_bug.cgi?id=221083

        Reviewed by Youenn Fablet.

        * media/picture-in-picture/picture-in-picture-api-events-expected.txt:
        * media/picture-in-picture/picture-in-picture-api-events.html:
        Check the picture-in-picture window in the "leavepictureinpicture" event handler.

2022-03-10  Chris Dumez  <cdumez@apple.com>

        Main document is leaking on haaretz.co.il due to lazy image loading
        https://bugs.webkit.org/show_bug.cgi?id=237660
        <rdar://problem/90035071>

        Reviewed by Geoffrey Garen.

        Add layout test coverage.

        * fast/dom/lazy-image-loading-document-leak-expected.txt: Added.
        * fast/dom/lazy-image-loading-document-leak.html: Added.
        * fast/dom/resources/lazy-image-loading-document-leak-popup.html: Added.

2022-03-10  Matteo Flores  <matteo_flores@apple.com>

        [ iOS Mac ] imported/w3c/web-platform-tests/service-workers/service-worker/partitioned-service-worker-matchAll.tentative.https.html is a flaky text failure on all queues
        https://bugs.webkit.org/show_bug.cgi?id=237680

        Unreviewed test gardening.

        * platform/ios/TestExpectations:
        * platform/mac/TestExpectations:

2022-03-10  Alan Bujtas  <zalan@apple.com>

        [IFC][Integration] Enable RenderListItem and RenderListMarker for IFC
        https://bugs.webkit.org/show_bug.cgi?id=237497

        Reviewed by Antti Koivisto.

        * fast/replaced/ul-li-word-break-break-word-expected.html: progression. We do not break between the list marker and the content anymore.
        * platform/mac/css1/box_properties/margin_right-expected.txt:
        * platform/mac/css1/box_properties/padding_right-expected.txt: ^^progressions. Align list marker with the content (like Firefox does).